--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,11 @@
-- src: https://github.com/CiscoDevNet/ansible-pyats
-  scm: git
-  name: ansible-pyats
+---
+# Requirements File for Devnet Create Sandbox
+roles:
+  - src: https://github.com/CiscoDevNet/ansible-pyats
+    scm: git
+    name: ansible-pyats
+
+collections:
+  - name: wwt.trafficjam
+    version: 1.0.0
+    source: https://galaxy.ansible.com 
