--- a/provision_loopbacks.yml
+++ b/provision_loopbacks.yml
@@ -30,6 +30,7 @@
             vrf_id: 54
             v4_address: "{{ item }}"
     loop: "{{ vrf_A_addresses }}"
+    ignore_errors: true
     loop_control:
         pause: 2
         index_var: my_idx_a
@@ -44,6 +45,7 @@
             vrf_id: 55
             v4_address: "{{ item }}"
     loop: "{{ vrf_B_addresses }}"
+    ignore_errors: true
     loop_control:
         pause: 2
         index_var: my_idx_b
